api created for get todo and update todo status
