# server/src/controllers/todo/index.ts
@@ -1,2 +1,3 @@
 export { createTodo } from './create-todo';
 export { getTodos } from './get-todos';
+export { updateTodoStatus } from './update-todo';
